# chip8-emulator

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cd.yml  ci.yml
cmake/: functions.cmake
src/: chip8.cpp  chip8.hpp  constants.hpp  cpu.cpp  cpu.hpp  display.cpp  display.hpp  io_manager.cpp  io_manager.hpp  main.cpp  memory.cpp  memory.hpp  sdl2manager.cpp  sdl2manager.hpp  utility.cpp  utility.hpp
